frontend/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: inventory-app
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: inventory-app
        tier: frontend
        track: stable
    spec:
      containers:
      - name: inventory-app-frontend
        image: "571372182587.dkr.ecr.us-east-1.amazonaws.com/prod/inventory-app-frontend:latest"
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "300m"
