frontend/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: inventory-app
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https  
    protocol: TCP
    port: 443
    targetPort: 80
